# zephyr_libraries

./: .clang-tidy  .gitignore  CMakeLists.txt  Kconfig  README.rst  west.yml
cmake/: ClangAnalyzers.cmake
drivers/: CMakeLists.txt
scripts/: run_clang_tidy.py
zephyr/: module.yml
